--- a/Livraria.Application/Livraria.Application.csproj
+++ b/Livraria.Application/Livraria.Application.csproj
@@ -10,4 +10,11 @@
 		<ProjectReference Include="..\Livraria.Domain\Livraria.Domain.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Abstractions\" />
+	  <Folder Include="DTOs\" />
+	  <Folder Include="Mappings\" />
+	  <Folder Include="Services\" />
+	</ItemGroup>
+
 </Project>
