--- a/Livraria.Blazor/appsettings.json
+++ b/Livraria.Blazor/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Sqlite": "Data Source=Livraria.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
